crates/toml/tests/snapshots/invalid/key/space-quoted.stderr
TOML parse error at line 2, column 5
  |
2 | "a" "b" = 1
  |     ^
key with no value, expected `=`
